--- a/src/css/style.css
+++ b/src/css/style.css
@@ -369,7 +369,7 @@ input {
 
 .service__list_item {
     position: relative;
-    position: relative;
+    overflow: hidden;
 }
 
     .service__list_item:before {
@@ -402,6 +402,27 @@ input {
     color: #1F2229;
     top: 57px;
 }
+
+    .service__list_name span {
+        display: block;
+        position: relative;
+        z-index: 20;
+    }
+
+    .service__list_name:before {
+        content: "";
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        padding-bottom: 12px;
+        border-radius: 10px;
+        /* background-color: #f5f5f5; */
+        box-shadow: 0px 0px 30px #f5f5f5, inset 0px 0px 80px #f5f5f5, inset 0px 0px 90px #f5f5f5, 0px 0px 42px #f5f5f5;
+        left: -10px;
+        top: -10px;
+    }
 
 .location {
     margin-top: 185px;
